--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8" />
   <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
@@ -22,10 +21,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Inpporter응애</title>
+  <title>sibalInpporter</title>
   <!-- Start Single Page Apps for GitHub Pages -->
-   <!-- Start Single Page Apps for GitHub Pages -->
-   <script type="text/javascript">
+  <!-- Start Single Page Apps for GitHub Pages -->
+  <script type="text/javascript">
     // Single Page Apps for GitHub Pages
     // https://github.com/rafrex/spa-github-pages
     // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
@@ -55,9 +54,7 @@
     }(window.location))
   </script>
   <!-- End Single Page Apps for GitHub Pages -->
-
 </head>
-
 <body>
   <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
   <div id="root"></div>
@@ -72,5 +69,4 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
-
 </html>
