--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- <meta name="theme-color" content="#000000" /> -->
   <meta name="description" content="Web site created using create-react-app" />
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>sibalInpporter</title>
+  <title>Inpporter</title>
   <!-- Start Single Page Apps for GitHub Pages -->
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
